[tool.poetry]
name = "operator-cli"
version = "0.1.0"
description = "StakeWise Operator CLI is used to generate and manage ETH2 validator keys."
authors = ["Dmitri Tsumak <tsumak.dmitri@gmail.com>"]
license = "AGPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.8"
python-decouple = "==3.4"
web3 = "==5.23.1"
py-ecc = "==5.2.0"
eth2deposit = {git = "https://github.com/ethereum/eth2.0-deposit-cli", rev = "v1.2.0"}
hvac = {version = "==0.11.2", extras = ["parser"]}
gql = {version = "==3.0.0a6", allow-prereleases = true, extras = ["aiohttp"]}
backoff = "==1.11.1"
aiohttp = {version = "==3.7.4.post0", extras = ["speedups"]}
ssz = "==0.2.4"
click = "==8.0.3"

[tool.poetry.dev-dependencies]
mypy = "==0.910"
black = "==21.9b0"
flake8 = "==3.9.2"
isort = "==5.9.3"
flake8-black = "==0.2.3"
flake8-bugbear = "==21.9.1"
pre-commit = "==2.15.0"
pyinstaller = "==4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
