[tool.poetry]
name = "stakewise-cli"
version = "0.1.2"
description = "Galaxy Digital Operator CLI is used to generate and manage Ethereum validator keys."
authors = ["Dmitri Tsumak <tsumak.dmitri@gmail.com>","Mario Delgado <mdelgado@cryptomanufaktur.io>","Thorsten Behrens <tbehrens@cryptomanufaktur.io>"]
license = "AGPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
python-decouple = "==3.6"
web3 = "==5.28.0"
staking-deposit = {git = "https://github.com/ethereum/staking-deposit-cli", rev = "v2.3.0"}
gql = {version = "==3.1.0", extras = ["aiohttp"]}
click = "==8.1.2"
psycopg2-binary = "==2.9.3"

[tool.poetry.dev-dependencies]
mypy = "==0.942"
black = "==22.3.0"
flake8 = "==4.0.1"
isort = "==5.10.1"
flake8-black = "==0.3.2"
flake8-bugbear = "==22.3.23"
pre-commit = "==2.18.1"
pyinstaller = "==4.10"
types-requests = "==2.27.27"
types-PyYAML = "==6.0.8"
Faker = "==13.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
